upload first pass extractions

--- a/studies/metaMER_library_extraction_first_pass.bib
+++ b/studies/metaMER_library_extraction_first_pass.bib
@@ -1789,7 +1789,7 @@ exp3_arousal = 0.68, exp4_arousal = 0.68),
   MODEL_RATE_EMOTION_NAMES = {valence, arousal},
   MODEL_RATE_EMOTION_VALUES = { },
   MODEL_VALIDATION = { },
-  DISCUSS = {T} %% unsure how to report results
+  DISCUSS = {T} %% unsure how to report results. Quality issues? OvR detection ...
 }
 
 
@@ -1813,28 +1813,34 @@ exp3_arousal = 0.68, exp4_arousal = 0.68),
   PARADIGM = {regression},
   NOTES_CA = {include},
   NOTES_TE = {include, both R2 and classification included},
-  EMOTIONS = { },
-  EMOTION_LOCUS = { },
-  STIMULUS_TYPE = { },
-  STIMULUS_DURATION = { },
-  STIMULUS_DURATION_UNIT = { },
-  STIMULUS_N = { },
-  FEATURE_N = { },
-  PARTICIPANT_N = { },
-  PARTICIPANT_EXPERTISE = { },
-  PARTICIPANT_ORIGIN = { },
-  PARTICIPANT_SAMPLING = { },
-  PARTICIPANT_TASK = { },
-  FEATURE_CATEGORIES = { },
-  FEATURE_SOURCE = { },
-  FEATURE_REDUCTION_METHOD = { },
-  MODEL_CATEGORY = { },
-  MODEL_DETAIL = { },
-  MODEL_MEASURE = { },
-  MODEL_COMPLEXITY_PARAMETERS = { },
-  MODEL_RATE_EMOTION_NAMES = { },
-  MODEL_RATE_EMOTION_VALUES = { },
-  MODEL_VALIDATION = { }
+  EMOTIONS = {valence, arousal},
+  EMOTION_LOCUS = {perceived},
+  STIMULUS_TYPE = {DEAM}, %% use DEAM dataset
+  STIMULUS_DURATION = {45},
+  STIMULUS_DURATION_UNIT = {s},
+  STIMULUS_N = {431}, %% subset of DEAM
+  FEATURE_N = {specified elsewhere},
+  PARTICIPANT_N = {specified elsewhere},
+  PARTICIPANT_EXPERTISE = {specified elsewhere},
+  PARTICIPANT_ORIGIN = {specified elsewhere},
+  PARTICIPANT_SAMPLING = {specified elsewhere},
+  PARTICIPANT_TASK = {rate},
+  FEATURE_CATEGORIES = {specified elsewhere},
+  FEATURE_SOURCE = {OpenSMILE}, %% specified elsewhere. Take notes on features...
+  FEATURE_REDUCTION_METHOD = {not specified},
+  MODEL_CATEGORY = {regression},
+  MODEL_DETAIL = {rbind(deep-neural-network = c('1D convolution layer', 'autoencoder-based layer with iterative reconstruction', 'bidirectional gated recurrent unit'),
+'time-distributed-layer' = c('CNN', 'iterative reconstruction', 'bidirectional gated recurrent unit'))},
+  MODEL_MEASURE = {RMSE, PCC},
+  MODEL_COMPLEXITY_PARAMETERS = {'optimization' = c('back-propogation through time', 'adam optimizer with default parameters')},
+  MODEL_RATE_EMOTION_NAMES = {arousal, valence},
+  MODEL_RATE_EMOTION_VALUES = {OpenSMILE = rbind('CNN-BiGRU.audio.deam.1' = c(arousal_rmse.mean = 0.116, arousal_rmse.sd = 0.004, arousal_pcc.mean = 0.63, arousal_pcc.sd = 0.01, 
+												   valence_rmse.mean = 0.123, valence_rmse.sd = 0.003, valence_pcc.mean = 0.618, valence_pcc.sd = 0.005),
+'CNN-IR-BiGRU.audio.deam.1' = c(arousal_rmse.mean = 0.105, arousal_rmse.sd = 0.001, arousal_pcc.mean = 0.66, arousal_pcc.sd = 0.004, 
+			 valence_rmse.mean = 0.114, valence_rmse.sd = 0.0005, valence_pcc.mean = 0.637, valence_pcc.sd = 0.007)
+)
+},
+  MODEL_VALIDATION = {not specified}
 }
 
 
@@ -1878,7 +1884,8 @@ exp3_arousal = 0.68, exp4_arousal = 0.68),
   MODEL_COMPLEXITY_PARAMETERS = { },
   MODEL_RATE_EMOTION_NAMES = { },
   MODEL_RATE_EMOTION_VALUES = { },
-  MODEL_VALIDATION = { }
+  MODEL_VALIDATION = { },
+ DISCUSS = {T} %% beyond scope?
 }
 
 
@@ -1902,28 +1909,29 @@ exp3_arousal = 0.68, exp4_arousal = 0.68),
   PARADIGM = {regression},
   NOTES_CA = {exclude, no modeling task},
   NOTES_TE = {include, R2},
-  EMOTIONS = { },
-  EMOTION_LOCUS = { },
-  STIMULUS_TYPE = { },
-  STIMULUS_DURATION = { },
-  STIMULUS_DURATION_UNIT = { },
-  STIMULUS_N = { },
-  FEATURE_N = { },
-  PARTICIPANT_N = { },
-  PARTICIPANT_EXPERTISE = { },
-  PARTICIPANT_ORIGIN = { },
-  PARTICIPANT_SAMPLING = { },
-  PARTICIPANT_TASK = { },
-  FEATURE_CATEGORIES = { },
-  FEATURE_SOURCE = { },
-  FEATURE_REDUCTION_METHOD = { },
-  MODEL_CATEGORY = { },
-  MODEL_DETAIL = { },
-  MODEL_MEASURE = { },
-  MODEL_COMPLEXITY_PARAMETERS = { },
-  MODEL_RATE_EMOTION_NAMES = { },
-  MODEL_RATE_EMOTION_VALUES = { },
-  MODEL_VALIDATION = { }
+  EMOTIONS = {activation, valence},
+  EMOTION_LOCUS = {not specified},
+  STIMULUS_TYPE = {piano pieces, classical music}, %% piano works from vieillard et al. (2008)
+  STIMULUS_DURATION = {8-12},
+  STIMULUS_DURATION_UNIT = {s},
+  FEATURE_N = {22}, %% five in final model
+  PARTICIPANT_N = {16},
+  STIMULUS_N = {40},
+  PARTICIPANT_EXPERTISE = {no formal training},
+  PARTICIPANT_ORIGIN = {not specified}, %% presumably Spain
+  PARTICIPANT_SAMPLING = {not specified}, %% presumably convenience
+  PARTICIPANT_TASK = {rate, categorize},
+  FEATURE_CATEGORIES = {rhythm},
+  FEATURE_SOURCE = {MIRToolbox},
+  FEATURE_REDUCTION_METHOD = {correlation significance, PCA},
+  MODEL_CATEGORY = {regression},
+  MODEL_DETAIL = {MLR, five predictors following PCA},
+  MODEL_MEASURE = {R2, eta2},
+  MODEL_COMPLEXITY_PARAMETERS = {23},
+  MODEL_RATE_EMOTION_NAMES = {valence, activation},
+  MODEL_RATE_EMOTION_VALUES = {MIRToolbox = mrbind('multiple linear regression.onset curves.1.1' = c(activation_r2.r2 = 0.537, activation_eta2.eta2 = 0.537,
+  valence_r2.r2 = 0.218, valence_eta2.eta2 = 0.218))},
+  MODEL_VALIDATION = {cross-validation}
 }
 
 
@@ -1945,28 +1953,34 @@ exp3_arousal = 0.68, exp4_arousal = 0.68),
   PARADIGM = {regression},
   NOTES_CA = {include},
   NOTES_TE = {include, classification of quadrant},
-  EMOTIONS = { },
-  EMOTION_LOCUS = { },
-  STIMULUS_TYPE = { },
-  STIMULUS_DURATION = { },
-  STIMULUS_DURATION_UNIT = { },
-  STIMULUS_N = { },
-  FEATURE_N = { },
-  PARTICIPANT_N = { },
-  PARTICIPANT_EXPERTISE = { },
-  PARTICIPANT_ORIGIN = { },
-  PARTICIPANT_SAMPLING = { },
-  PARTICIPANT_TASK = { },
-  FEATURE_CATEGORIES = { },
-  FEATURE_SOURCE = { },
-  FEATURE_REDUCTION_METHOD = { },
-  MODEL_CATEGORY = { },
-  MODEL_DETAIL = { },
-  MODEL_MEASURE = { },
-  MODEL_COMPLEXITY_PARAMETERS = { },
-  MODEL_RATE_EMOTION_NAMES = { },
-  MODEL_RATE_EMOTION_VALUES = { },
-  MODEL_VALIDATION = { }
+  EMOTIONS = {valence, arousal},
+  EMOTION_LOCUS = {perceived},
+  STIMULUS_TYPE = {classical},
+  STIMULUS_DURATION = {120},
+  STIMULUS_DURATION_UNIT = {s},
+  STIMULUS_N = {12},
+  FEATURE_N = {13},
+  PARTICIPANT_N = {54}, %% 45 for static network, 9 for Elman network
+  PARTICIPANT_EXPERTISE = {c('standard network' = 'limited musical training',
+  'elman network' = 'musical training')},
+  PARTICIPANT_ORIGIN = {not specified}, %% presumably canada
+  PARTICIPANT_SAMPLING = {not specified}, %% presumably convenience
+  PARTICIPANT_TASK = {rate},
+  FEATURE_CATEGORIES = {dynamic, timbre, rhythm, harmony},
+  FEATURE_SOURCE = {MIRToolbox},
+  FEATURE_REDUCTION_METHOD = {not specified},
+  MODEL_CATEGORY = {classification, neural nets},
+  MODEL_DETAIL = {static neural network, elman neural network},
+  MODEL_MEASURE = {classification accuracy},
+  MODEL_COMPLEXITY_PARAMETERS = {rbind('static network' = c('input units' = 13, 'hidden units' = 13, 'output units' = 2, 'training epochs' = 10000,
+                           'learning rate' = 0.3, 'context units' = NA),
+      'static network' = c('input units' = 13, 'hidden units' = 13, 'output units' = 2, 'training epochs' = 10000,
+                           'learning rate' = 0.3, 'context units' = 13))},
+  MODEL_RATE_EMOTION_NAMES = {valence, arousal},
+  MODEL_RATE_EMOTION_VALUES = {MIRToolbox = mrbind('static neural network.1.1.1' = c(classification_accuracy.mean = 85.7),
+  'elman neural network.1.1.1' = c(classification_accuracy.mean = 54.3))}, %% final epoch accuracy: 60%. Can retrieve values from graph potentially
+  MODEL_VALIDATION = {train-test split},
+  DISCUSS = {T} %% proceedings article??
 }
 
 
@@ -1987,28 +2001,39 @@ exp3_arousal = 0.68, exp4_arousal = 0.68),
   PARADIGM = {regression},
   NOTES_CA = {include, acoustic model present in paper},
   NOTES_TE = {include},
-  EMOTIONS = { },
-  EMOTION_LOCUS = { },
-  STIMULUS_TYPE = { },
-  STIMULUS_DURATION = { },
-  STIMULUS_DURATION_UNIT = { },
-  STIMULUS_N = { },
-  FEATURE_N = { },
-  PARTICIPANT_N = { },
-  PARTICIPANT_EXPERTISE = { },
-  PARTICIPANT_ORIGIN = { },
-  PARTICIPANT_SAMPLING = { },
-  PARTICIPANT_TASK = { },
-  FEATURE_CATEGORIES = { },
-  FEATURE_SOURCE = { },
-  FEATURE_REDUCTION_METHOD = { },
-  MODEL_CATEGORY = { },
-  MODEL_DETAIL = { },
-  MODEL_MEASURE = { },
-  MODEL_COMPLEXITY_PARAMETERS = { },
-  MODEL_RATE_EMOTION_NAMES = { },
-  MODEL_RATE_EMOTION_VALUES = { },
-  MODEL_VALIDATION = { }
+  EMOTIONS = {valence, tension arousal, energy arousal},
+  EMOTION_LOCUS = {perceived},
+  STIMULUS_TYPE = {chinese, western classical music},
+  STIMULUS_DURATION = {not specified},
+  STIMULUS_DURATION_UNIT = {s},
+  STIMULUS_N = {48}, %% 2 melodies * 4 quadrants * 6 timbres
+  FEATURE_N = {18}, %% three from Timbre Toolbox
+  PARTICIPANT_N = {160},
+  PARTICIPANT_EXPERTISE = {musicians, nonmusicians},
+  PARTICIPANT_ORIGIN = {Canada, China},
+  PARTICIPANT_SAMPLING = {not specified}, %% presumably convenience
+  PARTICIPANT_TASK = {rate}, %%
+  FEATURE_CATEGORIES = {timbre},
+  FEATURE_SOURCE = {MIRToolbox, Timbre Toolbox},
+  FEATURE_REDUCTION_METHOD = {PLSR},
+  MODEL_CATEGORY = {regression},
+  MODEL_DETAIL = {PLSR},
+  MODEL_MEASURE = {R2, Q2},
+  MODEL_COMPLEXITY_PARAMETERS = {two pcs},
+  MODEL_RATE_EMOTION_NAMES = {valence, tension arousal, energy arousal},
+  MODEL_RATE_EMOTION_VALUES = {
+  MIRToolbox = mrbind(
+  PLSR.timbre.western.1 = c(
+  valence_r2.r2 = 0.48, valence_q2.q2 = 0.32, valence_pc1.pc1 = 0.22, valence_pc2.pc2 = 0.38, 
+  'tension arousal_r2.r2' = 0.70, 'tension arousal_q2.q2' = 0.65, 'tension arousal_pc1.pc1' = 0.44, 'tension arousal_pc2.pc2' = 0.18, 
+  'energy arousal_r2.r2'= 0.70, 'energy arousal_q2.q2' = 0.62, 'energy arousal_pc1.pc1' = 0.37, 'energy arousal_pc2.pc2' = 0.25),
+  PLSR.timbre.chinese.1 = c(
+  valence_r2.r2 = 0.55, valence_q2.q2 = 0.44, valence_pc1.pc1 = 0.32, valence_pc2.pc2 = 0.31, 
+  'tension arousal_r2.r2' = 0.36, 'tension arousal_q2.q2' = 0.22, 'tension arousal_pc1.pc1' = 0.44, 'tension arousal_pc2.pc2' = 0.13, 
+  'energy arousal_r2.r2' = 0.67, 'energy arousal_q2.q2' = 0.60, 'energy arousal_pc1.pc1' = 0.38, 'energy arousal_pc2.pc2' = 0.25)
+  )
+  },
+  MODEL_VALIDATION = {6-fold cross validation}
 }
 
 
@@ -2030,28 +2055,39 @@ exp3_arousal = 0.68, exp4_arousal = 0.68),
   PARADIGM = {regression},
   NOTES_CA = {include, though reports negative r^2 values in model comparison in table 2},
   NOTES_TE = {include},
-  EMOTIONS = { },
-  EMOTION_LOCUS = { },
-  STIMULUS_TYPE = { },
-  STIMULUS_DURATION = { },
-  STIMULUS_DURATION_UNIT = { },
-  STIMULUS_N = { },
-  FEATURE_N = { },
-  PARTICIPANT_N = { },
-  PARTICIPANT_EXPERTISE = { },
-  PARTICIPANT_ORIGIN = { },
-  PARTICIPANT_SAMPLING = { },
-  PARTICIPANT_TASK = { },
-  FEATURE_CATEGORIES = { },
-  FEATURE_SOURCE = { },
-  FEATURE_REDUCTION_METHOD = { },
-  MODEL_CATEGORY = { },
-  MODEL_DETAIL = { },
-  MODEL_MEASURE = { },
-  MODEL_COMPLEXITY_PARAMETERS = { },
-  MODEL_RATE_EMOTION_NAMES = { },
-  MODEL_RATE_EMOTION_VALUES = { },
-  MODEL_VALIDATION = { }
+  EMOTIONS = {valence, arousal},
+  EMOTION_LOCUS = {perceived},
+  STIMULUS_TYPE = {emoMusic, Soundtracks, Chinese Classical Music Dataset},
+  STIMULUS_DURATION = {c(emoMusic = '45', soundtracks = '10 to 30', chinese = '30')}, %% ~30 seconds for Chinese Classical dataset, 10-30 for Soundtracks, ~45 for emoMusic
+  STIMULUS_DURATION_UNIT = {s},
+  STIMULUS_N = {c(emoMusic = 1000, soundtracks = 360, chinese = 500)}, %% emoMusic contains full 1000? 
+  FEATURE_N = {variable, 557 before feature selection}, %% dimensionality BEFORE reduction
+  PARTICIPANT_N = {c(emoMusic = '10 min per excerpt', soundtracks = 12, chinese = 20)},
+  PARTICIPANT_EXPERTISE = {c(emoMusic = 'nonexperts', soundtracks = '10 years of musical training',
+  chinese = 'audio technology')},
+  PARTICIPANT_ORIGIN = {variable},
+  PARTICIPANT_SAMPLING = {variable},
+  PARTICIPANT_TASK = {rate},
+  FEATURE_CATEGORIES = {Timbre, Pitch, Dynamic, Rhythm},
+  FEATURE_SOURCE = {MIRToolbox, Essentia},
+  FEATURE_REDUCTION_METHOD = {StandardScaler, Min-MaxScaler, MaxAbsScaler, Quantile Transformer Uniform distribution (QTU), Quantile Transformer with Gaussian distribution (QTG)},
+  MODEL_CATEGORY = {regression},
+  MODEL_DETAIL = {extremely randomized tree regression},
+  MODEL_MEASURE = {R2},
+  MODEL_COMPLEXITY_PARAMETERS = {MaxAbsScaler method, 20 combinations of pre-processing and feature selection were evaluated to obtain the optimal method},
+  MODEL_RATE_EMOTION_NAMES = {valence, arousal},
+  MODEL_RATE_EMOTION_VALUES = {
+  library = mrbind(ERT.1.western.1 =  c(valence_r2.globalOptimal = 0.695, 
+  valence_nFeatures.globalOptimal = 42, valence_r2.localOptimal = 0.674, valence_nFeatures.localOptimal = 21,
+  arousal_r2.globalOptimal = 0.572, 
+  arousal_nFeatures.globalOptimal = 38, arousal_r2.localOptimal = 0.560, arousal_nFeatures.localOptimal = 17),
+  ERT.1.chinese.1 =  c(valence_r2.globalOptimal = 0.621, 
+  valence_nFeatures.globalOptimal = 121, valence_r2.localOptimal = 0.607, valence_nFeatures.localOptimal = 21,
+  arousal_r2.globalOptimal = 0.673, 
+  arousal_nFeatures.globalOptimal = 76, arousal_r2.localOptimal = 0.652, arousal_nFeatures.localOptimal = 22)
+  )
+  },
+  MODEL_VALIDATION = {five-fold cross validation}
 }
 
 
@@ -2072,28 +2108,37 @@ exp3_arousal = 0.68, exp4_arousal = 0.68),
   PARADIGM = {regression},
   NOTES_CA = {include},
   NOTES_TE = {include, regression},
-  EMOTIONS = { },
-  EMOTION_LOCUS = { },
-  STIMULUS_TYPE = { },
-  STIMULUS_DURATION = { },
-  STIMULUS_DURATION_UNIT = { },
-  STIMULUS_N = { },
-  FEATURE_N = { },
-  PARTICIPANT_N = { },
-  PARTICIPANT_EXPERTISE = { },
-  PARTICIPANT_ORIGIN = { },
-  PARTICIPANT_SAMPLING = { },
-  PARTICIPANT_TASK = { },
-  FEATURE_CATEGORIES = { },
-  FEATURE_SOURCE = { },
-  FEATURE_REDUCTION_METHOD = { },
-  MODEL_CATEGORY = { },
-  MODEL_DETAIL = { },
-  MODEL_MEASURE = { },
-  MODEL_COMPLEXITY_PARAMETERS = { },
-  MODEL_RATE_EMOTION_NAMES = { },
-  MODEL_RATE_EMOTION_VALUES = { },
-  MODEL_VALIDATION = { }
+  EMOTIONS = {valence, tension arousal, energy arousal},
+  EMOTION_LOCUS = {perceived},
+  STIMULUS_TYPE = {chinese solo, chinese ensemble, western solo, western ensemble,
+  Chinese classical dataset, MediaEval, Emotify, AMG1608}, %% stimuli sampled from other data sets
+  STIMULUS_DURATION = {'10 to 15'},
+  STIMULUS_DURATION_UNIT = {s},
+  STIMULUS_N = {146}, %% 515 before reliability test 
+  FEATURE_N = {15},
+  PARTICIPANT_N = {30},
+  PARTICIPANT_EXPERTISE = {no restrictions}, 
+  PARTICIPANT_ORIGIN = {China},
+  PARTICIPANT_SAMPLING = {online, convenience}, %% presumably convenience
+  PARTICIPANT_TASK = {rate},
+  FEATURE_CATEGORIES = {Timbre, Rhythm, Dynamics, Pitch},
+  FEATURE_SOURCE = {ppmBatch, MIRToolbox, expert annotation},
+  FEATURE_REDUCTION_METHOD = {PCA},%% part of PLSR
+  MODEL_CATEGORY = {regression},
+  MODEL_DETAIL = {PLSR},
+  MODEL_MEASURE = {R2},
+  MODEL_COMPLEXITY_PARAMETERS = {},
+  MODEL_RATE_EMOTION_NAMES = {valence, tension arousal, energy arousal},
+  MODEL_RATE_EMOTION_VALUES = {rbind(
+  pls.mixed.chineseClassicalEnsembles.1 = c(valence_r2.r2 = 0.85, valence_q2.q2 = 0.73, valence_pc1.pc1 = 0.36, valence_pc2.pc2 = 0.14,
+                                            'tension arousal_r2.r2' = 0.77, 'tension arousal_q2.q2' = 0.62, 'tension arousal_pc1.pc1' = 0.35, 'tension arousal_pc2.pc2' = 0.21,
+                                            'energy arousal_r2.r2' = 0.91, 'energy arousal_q2.q2' = 0.87, 'energy arousal_pc1.pc1' = 0.37, 'energy arousal_pc2.pc2' = 0.14),
+  pls.mixed.chineseClassicalSolo.1 = c(0.64,0.3,0.22,0.16,0.54,0.17,0.21,0.17,0.76,0.5,0.21,0.12),
+  pls.mixed.westernClassicalEnsembles.1 = c(.62,.4,.23,.17,.6,.44,.28,.14,.81,.7,.29,.14),
+  pls.mixed.westernClassicalSolo.1 = c(.8,.64,.25,.14,.77,.64,.27,.14,.9,.87,.27,.16)
+)
+},
+  MODEL_VALIDATION = {six-fold cross validation}
 }
 
 
@@ -2114,9 +2159,9 @@ exp3_arousal = 0.68, exp4_arousal = 0.68),
   PARADIGM = {regression},
   NOTES_CA = {include},
   NOTES_TE = {include, although some quality issues},
-  EMOTIONS = { },
+  EMOTIONS = {},
   EMOTION_LOCUS = { },
-  STIMULUS_TYPE = { },
+  STIMULUS_TYPE = {},
   STIMULUS_DURATION = { },
   STIMULUS_DURATION_UNIT = { },
   STIMULUS_N = { },
@@ -2130,12 +2175,13 @@ exp3_arousal = 0.68, exp4_arousal = 0.68),
   FEATURE_SOURCE = { },
   FEATURE_REDUCTION_METHOD = { },
   MODEL_CATEGORY = { },
-  MODEL_DETAIL = { },
+  MODEL_DETAIL = {},
   MODEL_MEASURE = { },
   MODEL_COMPLEXITY_PARAMETERS = { },
   MODEL_RATE_EMOTION_NAMES = { },
   MODEL_RATE_EMOTION_VALUES = { },
-  MODEL_VALIDATION = { }
+  MODEL_VALIDATION = { },
+  DISCUSS = {T} %% Quality issues
 }
 
 
@@ -2156,28 +2202,38 @@ exp3_arousal = 0.68, exp4_arousal = 0.68),
   PARADIGM = {regression},
   NOTES_CA = {include},
   NOTES_TE = {include},
-  EMOTIONS = { },
-  EMOTION_LOCUS = { },
-  STIMULUS_TYPE = { },
-  STIMULUS_DURATION = { },
-  STIMULUS_DURATION_UNIT = { },
-  STIMULUS_N = { },
-  FEATURE_N = { },
-  PARTICIPANT_N = { },
-  PARTICIPANT_EXPERTISE = { },
-  PARTICIPANT_ORIGIN = { },
-  PARTICIPANT_SAMPLING = { },
-  PARTICIPANT_TASK = { },
-  FEATURE_CATEGORIES = { },
-  FEATURE_SOURCE = { },
-  FEATURE_REDUCTION_METHOD = { },
-  MODEL_CATEGORY = { },
-  MODEL_DETAIL = { },
-  MODEL_MEASURE = { },
-  MODEL_COMPLEXITY_PARAMETERS = { },
-  MODEL_RATE_EMOTION_NAMES = { },
-  MODEL_RATE_EMOTION_VALUES = { },
-  MODEL_VALIDATION = { }
+  EMOTIONS = {arousal, valence},
+  EMOTION_LOCUS = {perceived},
+  STIMULUS_TYPE = {1000 songs dataset},
+  STIMULUS_DURATION = {45},
+  STIMULUS_DURATION_UNIT = {s},
+  STIMULUS_N = {744}, 
+  FEATURE_N = {not specified},
+  PARTICIPANT_N = {minimum of 10 human annotators},
+  PARTICIPANT_EXPERTISE = {specified elsewhere},
+  PARTICIPANT_ORIGIN = {specified elsewhere},
+  PARTICIPANT_SAMPLING = {specified elsewhere},
+  PARTICIPANT_TASK = {rate},
+  FEATURE_CATEGORIES = {timbre},
+  FEATURE_SOURCE = {openSMILE},
+  FEATURE_REDUCTION_METHOD = {Sinusoidal Transform Coding},
+  MODEL_CATEGORY = {regression},
+  MODEL_DETAIL = { principal component regression (PCR), partial least squares (PLS) regression, and a feedforward networ.  peak-picking routine operation in a spectral envelope estimation vocoder (SEEVOC) framework},
+  MODEL_MEASURE = {RMSE},
+  MODEL_COMPLEXITY_PARAMETERS = {n principal components pca: 1 to 150, n predictor components pls 1 - 20, n hidden layers cnn: 1 to 30},
+  MODEL_RATE_EMOTION_NAMES = {valence, arousal},
+  MODEL_RATE_EMOTION_VALUES_REGRESSION = {match_named_values('pls.baseline features.100songs.1' = c(arousal_rmse.rmse = 0.146, valence_rmse.rmse = 0.156, arousal_r.r = 0.785, valence_r.r = 0.601), 
+                   'pls.stc.100songs.1' = c(0.149, 0.156, 0.775, 0.600), 
+                   'pls.baseline features + stc.100songs.1' = c(0.144, 0.151, 0.793,0.630),
+                   'pcr.baseline features.100songs.1' = c(0.147, 0.156,0.781,0.612),
+                   'pcr.stc.100songs.1' = c(0.150,0.157,0.770,0.585),
+                   'pcr.baseline features + stc.100songs.1' = c(0.144,0.150,0.793,0.634),
+                   'ff.baseline features' = c(0.172,0.169,0.732,0.570),
+                   'ff.stc.100songs.1' = c(0.179,0.172,0.730,.551),
+                   'ff.baseline features + stc.100songs.1' = c(0.165,0.158,.754,0.609)
+)
+ }, %% not reporting on classification as those involve spectrogram images instead.
+  MODEL_VALIDATION = {10-fold cross-validation}
 }
 
 
@@ -2197,28 +2253,32 @@ exp3_arousal = 0.68, exp4_arousal = 0.68),
   PARADIGM = {regression},
   NOTES_CA = {include},
   NOTES_TE = {include, audio prediction and R2 included},
-  EMOTIONS = { },
-  EMOTION_LOCUS = { },
-  STIMULUS_TYPE = { },
-  STIMULUS_DURATION = { },
-  STIMULUS_DURATION_UNIT = { },
-  STIMULUS_N = { },
-  FEATURE_N = { },
-  PARTICIPANT_N = { },
-  PARTICIPANT_EXPERTISE = { },
-  PARTICIPANT_ORIGIN = { },
-  PARTICIPANT_SAMPLING = { },
-  PARTICIPANT_TASK = { },
-  FEATURE_CATEGORIES = { },
-  FEATURE_SOURCE = { },
-  FEATURE_REDUCTION_METHOD = { },
-  MODEL_CATEGORY = { },
-  MODEL_DETAIL = { },
-  MODEL_MEASURE = { },
-  MODEL_COMPLEXITY_PARAMETERS = { },
-  MODEL_RATE_EMOTION_NAMES = { },
-  MODEL_RATE_EMOTION_VALUES = { },
-  MODEL_VALIDATION = { }
+  EMOTIONS = {valence, arousal},
+  EMOTION_LOCUS =  {perceived},
+  STIMULUS_TYPE = {Chinese pop songs from PSIC3839},
+  STIMULUS_DURATION = {specified elsewhere},
+  STIMULUS_DURATION_UNIT = {s},
+  STIMULUS_N = {2372}, %% subset of PSIC3839: total n =  3839
+  FEATURE_N = {total n not specified, top 50 of each category, after grid search: 156}, %% report using top 50 of each category, but 156 after RFR grid search
+  PARTICIPANT_N = {specified elsewhere},
+  PARTICIPANT_EXPERTISE = {specified elsewhere},
+  PARTICIPANT_ORIGIN = {China},
+  PARTICIPANT_SAMPLING = {specified elsewhere},
+  PARTICIPANT_TASK = {rate},
+  FEATURE_CATEGORIES = {rhythm, timbre, pitch, harmony},
+  FEATURE_SOURCE = {librosa},
+  FEATURE_REDUCTION_METHOD = {PCA, later grid parameter search},
+  MODEL_CATEGORY = {regression},
+  MODEL_DETAIL = {mlr, random forest regression},
+  MODEL_MEASURE = {r2, rmse},
+  MODEL_COMPLEXITY_PARAMETERS = {Arousal RFR: n_estimators = 156, max_depth = 10,  min_samples_leaf = 8 min_samples_split = 18 max_features = 0.5; Valence RFR: n_estimators = 179, max_depth = 15,  min_samples_leaf = 13 min_samples_split = 22 max_features = 0.5},
+  MODEL_RATE_EMOTION_NAMES = {valence, arousal},
+  MODEL_RATE_EMOTION_VALUES = {librosa = mrbind(
+  'random forest regression.audio.psic3839.1' = c(arousal_r2.r2 = 0.629, arousal_rmse.rmse = 0.147,
+                                                  valence_r2.r2 = 0.371, valence_rmse.rmse = 0.214)
+) },
+  MODEL_VALIDATION = {10-fold cross validation},
+ DISCUSS = {T}
 }
 
 
@@ -2237,31 +2297,46 @@ exp3_arousal = 0.68, exp4_arousal = 0.68),
   ISSN = {0925-2312},
   EISSN = {1872-8286},
   ORCID = {Zhang, Jianglong/0000-0002-9079-2499},
-  PARADIGM = {regression},
+  PARADIGM = {classification},
   NOTES_CA = {include},
   NOTES_TE = {include, classification},
-  EMOTIONS = { },
-  EMOTION_LOCUS = { },
-  STIMULUS_TYPE = { },
-  STIMULUS_DURATION = { },
-  STIMULUS_DURATION_UNIT = { },
-  STIMULUS_N = { },
-  FEATURE_N = { },
-  PARTICIPANT_N = { },
-  PARTICIPANT_EXPERTISE = { },
-  PARTICIPANT_ORIGIN = { },
-  PARTICIPANT_SAMPLING = { },
-  PARTICIPANT_TASK = { },
-  FEATURE_CATEGORIES = { },
-  FEATURE_SOURCE = { },
-  FEATURE_REDUCTION_METHOD = { },
-  MODEL_CATEGORY = { },
-  MODEL_DETAIL = { },
-  MODEL_MEASURE = { },
-  MODEL_COMPLEXITY_PARAMETERS = { },
-  MODEL_RATE_EMOTION_NAMES = { },
-  MODEL_RATE_EMOTION_VALUES = { },
-  MODEL_VALIDATION = { }
+  EMOTIONS = {valence, arousal},
+  EMOTION_LOCUS = {perceived},
+  STIMULUS_TYPE = {Chinese popular music from Zhang et al. (2015) },
+  STIMULUS_DURATION = {Specified elsewhere},
+  STIMULUS_DURATION_UNIT = {s},
+  STIMULUS_N = {Specified elsewhere},
+  FEATURE_N = {119},
+  PARTICIPANT_N = {Specified elsewhere},
+  PARTICIPANT_EXPERTISE = {Specified elsewhere},
+  PARTICIPANT_ORIGIN = {Specified elsewhere}, %% presumably china
+  PARTICIPANT_SAMPLING = {Specified elsewhere},
+  PARTICIPANT_TASK = {Rate},
+  FEATURE_CATEGORIES = {dynamic, timbre, rhythm, tonality }, %% "we make an assumption that the arousal is only dependent on the intensity features, and valence is dependent on the whole feature sets' 
+  FEATURE_SOURCE = {MA Toolbox, MIR Toolbox, coversongs, },
+  FEATURE_REDUCTION_METHOD = {filter methods, wrapper methods, shrinkage methods. Details: Relief-R-2, Relief-F-3, Correlation-Based (Pearson, Spearman, information-gain, gain-ratio) Forward Selection-AIC, L1-regularized logistic regression},
+  MODEL_CATEGORY = {classification},
+  MODEL_DETAIL = {penalized logistic regression, regularized SVM, tested models: LR,
+LDA, Quadratic Discriminant Analysis (QDA), KNN, Tree, Random-
+Forest (RF), Bagging (Bag), Boosting tree (Boost), Support Vector
+Machine with Radial kernel (SVM-R), Stagewise Penalty Logistic
+Regression (PLR), Support Vector Machine with Polynomial kernel
+(SVM-P), Support Vector Machine with Linear kernel (SVM-L), L1-
+LR, L2-LR, L1-SVM, L2-SVM and Shrunken Centroids Regularized
+Discriminant Analysis (RDA).},
+  MODEL_MEASURE = {Accuracy},
+  MODEL_COMPLEXITY_PARAMETERS = {Tuning parameters defined through 10-fold cross validation},
+  MODEL_RATE_EMOTION_NAMES = {valence, arousal},
+  MODEL_RATE_EMOTION_VALUES = {  match_named_values('l1 logistic regression.intensity.zhang2015so.1' = c(arousal_accuracy.mean = .84, valence_accuracy.mean = 0.64), 
+                   'l2 logistic regression.intensity.zhang2015so.1' = c(arousal_accuracy.mean = 0.83, valence_accuracy.mean = 0.68), 
+                   'l1 support vector regression.intensity.zhang2015so.1' = c(arousal_accuracy.mean = 0.83, valence_accuracy.median = 0.72), 
+                   'reguliarized discriminant analysis.intensity.zhang2015so.1' = c(arousal_accuracy.mean = 0.83), 
+                   'logistic regression.intensity.zhang2015so.1' = c(arousal_accuracy.mean = 0.8),
+                   'polynomial svm.intensity.zhang2015so.1'  = c(arousal_accuracy.mean = 0.774),
+                    'linear svm.intensity.zhang2015so.1'  = c(arousal_accuracy.mean = 81.4)
+)
+},
+  MODEL_VALIDATION = {10-fold cross validation (for tuning parameters)}
 }
 
 
@@ -2283,28 +2358,30 @@ exp3_arousal = 0.68, exp4_arousal = 0.68),
   PARADIGM = {regression},
   NOTES_CA = {include, single-modality reported},
   NOTES_TE = {include, use a subset of the results},
-  EMOTIONS = { },
-  EMOTION_LOCUS = { },
-  STIMULUS_TYPE = { },
-  STIMULUS_DURATION = { },
-  STIMULUS_DURATION_UNIT = { },
-  STIMULUS_N = { },
-  FEATURE_N = { },
-  PARTICIPANT_N = { },
-  PARTICIPANT_EXPERTISE = { },
-  PARTICIPANT_ORIGIN = { },
-  PARTICIPANT_SAMPLING = { },
-  PARTICIPANT_TASK = { },
-  FEATURE_CATEGORIES = { },
-  FEATURE_SOURCE = { },
-  FEATURE_REDUCTION_METHOD = { },
-  MODEL_CATEGORY = { },
-  MODEL_DETAIL = { },
-  MODEL_MEASURE = { },
-  MODEL_COMPLEXITY_PARAMETERS = { },
-  MODEL_RATE_EMOTION_NAMES = { },
-  MODEL_RATE_EMOTION_VALUES = { },
-  MODEL_VALIDATION = { }
+  EMOTIONS = {valence, arousal},
+  EMOTION_LOCUS = {perceived},
+  STIMULUS_TYPE = {Chinese folk music. Adopted from Xing et al. (2015)},
+  STIMULUS_DURATION = {10},
+  STIMULUS_DURATION_UNIT = {s},
+  STIMULUS_N = {420}, %% cite Xing et al. (2015). Stimuli divided into 21 groups each with 20 stimuli (five per quadrant). Each participant listened to 3 groups
+  FEATURE_N = {64}, %% 63 found relevant for valence, 64 for arousal (from feature selection method including other sources)
+  PARTICIPANT_N = {21},
+  PARTICIPANT_EXPERTISE = {no specific music training},
+  PARTICIPANT_ORIGIN = {not specified}, %% presumably china
+  PARTICIPANT_SAMPLING = {volunteer},
+  PARTICIPANT_TASK = {rate},
+  FEATURE_CATEGORIES = {timbre},
+  FEATURE_SOURCE = {marsyas},
+  FEATURE_REDUCTION_METHOD = {ANOVA, PCA. PCA may not be relevant to music-only model},
+  MODEL_CATEGORY = {regression},
+  MODEL_DETAIL =  {linear regression, ridge regression, SVM (three kernels), decision trees, kNN, multilayer perceptron, Nu support vector regression},
+  MODEL_MEASURE = {MSE, CC},
+  MODEL_COMPLEXITY_PARAMETERS = {Scikit learn defaults, RBF kernel},
+  MODEL_RATE_EMOTION_NAMES = {valence, arousal},
+  MODEL_RATE_EMOTION_VALUES = {marsyas = mrbind(
+  NuSVR.music.xing2014.1 = c(arousal_mse.mse = 0.0437, arousal_cc.cc = 0.425, valence_mse.mse = 0.0373, valence_cc.cc = 0.420)
+)},
+  MODEL_VALIDATION = {10 x 10 cross validation}
 }
 
 
@@ -2328,34 +2405,41 @@ exp3_arousal = 0.68, exp4_arousal = 0.68),
   PARADIGM = {regression},
   NOTES_CA = {include},
   NOTES_TE = {include, R2},
-  EMOTIONS = { },
-  EMOTION_LOCUS = { },
-  STIMULUS_TYPE = { },
-  STIMULUS_DURATION = { },
-  STIMULUS_DURATION_UNIT = { },
-  STIMULUS_N = { },
-  FEATURE_N = { },
-  PARTICIPANT_N = { },
-  PARTICIPANT_EXPERTISE = { },
-  PARTICIPANT_ORIGIN = { },
-  PARTICIPANT_SAMPLING = { },
-  PARTICIPANT_TASK = { },
-  FEATURE_CATEGORIES = { },
-  FEATURE_SOURCE = { },
-  FEATURE_REDUCTION_METHOD = { },
-  MODEL_CATEGORY = { },
-  MODEL_DETAIL = { },
-  MODEL_MEASURE = { },
-  MODEL_COMPLEXITY_PARAMETERS = { },
-  MODEL_RATE_EMOTION_NAMES = { },
-  MODEL_RATE_EMOTION_VALUES = { },
-  MODEL_VALIDATION = { }
+  EMOTIONS = {valence, arousal},
+  EMOTION_LOCUS = {perceived},
+  STIMULUS_TYPE =  {PMEmo, DEAM}, %% PMEmo: new, DEAM: benchmark
+  STIMULUS_DURATION = {DEAM: 45, PMEmo: specified elsewhere}, %% PMEmo has 794. Rest removed due to insufficieent annotation #
+  STIMULUS_DURATION_UNIT = {s},
+  STIMULUS_N = {DEAM: 744, PMEmo: 206},
+  FEATURE_N = { }, %% how to report
+  PARTICIPANT_N = {specified elsewhere},
+  PARTICIPANT_EXPERTISE = {specified elsewhere},
+  PARTICIPANT_ORIGIN = {specified elsewhere},
+  PARTICIPANT_SAMPLING = {specified elsewhere},
+  PARTICIPANT_TASK = {rate},
+  FEATURE_CATEGORIES = {filter banks, handcrafted},
+  FEATURE_SOURCE = {filter bank output (size = 120*120), 60 handcrafted features (size = 60*60)},
+  FEATURE_REDUCTION_METHOD = {weighted attention module, feature augmentation},
+  MODEL_CATEGORY =  {regression},
+  MODEL_DETAIL = {Modularized Composite Attention Network. Case 1: no sample reconstruction. Case 2: no handcrafted features (or feature augmentation). Case 3: No self-attention mechanism or BLSTM. Case 4: no style embedding module}, %% new method
+  MODEL_MEASURE = {RMSE, MAE, CCC},
+  MODEL_COMPLEXITY_PARAMETERS = {Batch size: 15, mixup technique applied to spectrograms, first convolutional layer alpha: 0.2, learning rate: 0.001, decreasing by 1/10 every 10 epochs. Adam optimizer. Dropout ratio 0.3 and 0.2,
+alpha = 0.18, beta = 0.49},
+  MODEL_RATE_EMOTION_NAMES = {valence, arousal},
+  MODEL_RATE_EMOTION_VALUES = { library = mrbind(
+   'MCAN.handcrafted and filter bank.deam.1' = c(valence_ccc.mean = 0.309, valence_rmse.mean = 0.112, valence_mae.mean = 0.811,
+                              valence_ccc.sd = 0.358, valence_rmse.sd = 0.010, valence_mae.sd = 0.009,
+                       arousal_ccc.mean = 0.502, arousal_rmse.mean = 0.109, arousal_mae.mean = 0.764,
+                       arousal_ccc.sd = 0.287, arousal_rmse.sd = 0.011, arousal_mae.sd = 0.023),
+   'MCAN. handcrafted and filter bank.PMEmo.1' = c(.215,.144,.892,0.265,.102,.030,.401,.135,.901,.315,0.057,0.103)
+ )}, %% only reporting final results (not five cases. Can add if important)
+  MODEL_VALIDATION = {ablation, train/test}
 }
 
 
 @Article{zhang2024ap,
   AUTHOR = {Zhang, Yao and Cai, Delin and Zhang, Dongmei},
-  JOURNAL = {Environment and Social Psychology},
+  JOURNAL = {Environment and Social Psychology}, %% dubious journal??
   NOTE = {Cited by: 0; All Open Access, Gold Open Access},
   NUMBER = {4},
   TITLE = {Application and algorithm optimization of music emotion recognition in piano performance evaluation},
@@ -2392,5 +2476,6 @@ exp3_arousal = 0.68, exp4_arousal = 0.68),
   MODEL_COMPLEXITY_PARAMETERS = { },
   MODEL_RATE_EMOTION_NAMES = { },
   MODEL_RATE_EMOTION_VALUES = { },
-  MODEL_VALIDATION = { }
+  MODEL_VALIDATION = { },
+  DISCUSS = {T}  %% dubious journal??
 }
