--- a/studies/library_parser.qmd
+++ b/studies/library_parser.qmd
@@ -256,20 +256,20 @@ model_result_2_df <- function(x) {
   print(model_values)
   # get additional attributes (feature.data.exp)
   model_attributes <- rownames(x)
-  print(model_attributes)
   data.frame(model_attributes)
   # get additional model details
-  model_attributes <- str_split_1(model_attributes, '\\.')
-  names(model_attributes) <- c('feature_id', 'data_id', 'experiment_id')
+  model_attributes <- data.frame(do.call('rbind', str_split(model_attributes, '\\.')))
+  names(model_attributes) <- c('model_id', 'feature_id', 'data_id', 'experiment_id')
+  print(names(model_attributes))
   # split across '_' to 
-  model_measures <- data.frame(do.call('rbind', str_split(colnames(x), '_')))
+  model_measures <- data.frame(do.call('rbind', stringr::str_split(colnames(x), '_')))
   print(model_measures)
   names(model_measures) <- c('dimension', 'measure')
-  model_measures_split <- str_split(model_measures[,'measure'], '\\.')
+  model_measures_split <- stringr::str_split(model_measures[,'measure'], '\\.')
   model_measures[,'measure'] <- unlist(lapply(model_measures_split, 
                                               function(x) x[1]))
   return(data.frame(toolbox, 
-             t(model_attributes), 
+             model_attributes, 
              model_measures, 
              values = model_values,
              statistic = model_statistic))
@@ -299,11 +299,11 @@ The following functions provide a working example for converting the r code cont
 Encoded values should use the following nomenclature:
 
 ```         
-library = rbind(features.data.exp = c(dim_measure.summary = 0.5, dim_measure.summary = 0.1), features.data.exp = c(dim_measure.summary = 0.2, dim_measure.summary = 0.5))
+library = rbind(model.features.data.exp = c(dim_measure.summary = 0.5, dim_measure.summary = 0.1), model.features.data.exp = c(dim_measure.summary = 0.2, dim_measure.summary = 0.5))
 
 # e.g.
 
-librosa = rbind(mfcc.msd.1 = c(valence_r2.mean = 0.5, arousal_r2.mean = 0.1), 
+librosa = rbind(randomforest.mfcc.msd.1 = c(valence_r2.mean = 0.5, arousal_r2.mean = 0.1), 
 temporal.msd.1 = c(valence_r2.mean = 0.2, arousal_r2.mean = 0.5,
 valence_r2.sd = 0.1, arousal_r2.sd = 0.1))
 ```
@@ -312,13 +312,14 @@ valence_r2.sd = 0.1, arousal_r2.sd = 0.1))
 
 ```{r}
 this_study <- data.frame(citekey = c('testStudy2023ab','testStudy2023ab', 'testStudy2020of'),
-  model_rate_emotion_values = c("marsyas = rbind(mfcc.msd.1 = c(valence_r2.mean = 0.9, arousal_r2.mean = 0.5,
+  model_rate_emotion_values = c("marsyas = rbind('random forest.mfcc.msd.1' = c(valence_r2.mean = 0.9, arousal_r2.mean = 0.5,
                                   valence_r2.sd = 0.4, arousal_r2.sd = 0.3,
-  valence_mse.mean = 0.3, arousal_mse.mean = 9.1))",
-  "librosa = rbind(mfcc.ismir.1 = c(valence_r2.mean = 0.1, arousal_r2.mean = 0.3,
+  valence_mse.mean = 0.3, arousal_mse.mean = 9.1),
+  'random forest.mfcc.deam.1' = c(valence_r2.mean = 0.9, arousal_r2.mean = 0.5))",
+  "librosa = rbind('linear regression.mfcc.ismir.1' = c(valence_r2.mean = 0.1, arousal_r2.mean = 0.3,
                                   valence_r2.sd = 0.2, arousal_r2.sd = 0.4,
   euclid_euclid.mean = 0.32, euclid_euclid.sd = 0.1))",
-  "mirtoolbox = rbind(pitch.filmMusic.2 = c(valence_r2.mean = 0.1, arousal_r2.mean = 0.3))")
+  "mirtoolbox = rbind('neural net.pitch.filmMusic.2' = c(valence_r2.mean = 0.1, arousal_r2.mean = 0.3))")
 )
 ```
 
@@ -326,4 +327,5 @@ this_study <- data.frame(citekey = c('testStudy2023ab','testStudy2023ab', 'testS
 
 ```{r}
 knitr::kable(get_study_summaries(this_study))
+write.csv(get_study_summaries(this_study), "~/testcsv.csv")
 ```
