--- a/preregistration/preregistration.qmd
+++ b/preregistration/preregistration.qmd
@@ -83,7 +83,12 @@ metamer_prereg <-
     query_strings = "<B>Scopus</B>: <code>TITLE-ABS-KEY ( valence OR arousal OR classi OR categor OR algorithm AND music <BR> AND emotion AND recognition ) AND PUBYEAR > 2013 AND PUBYEAR < 2025 AND <BR> ( LIMIT-TO ( DOCTYPE , \"ar\" ) ) </code><BR>
     <B>Web of science</B>: <code> (DT=(Article) AND PY=(2014-2025)) AND ALL=(music <BR>emotion recognition valence arousal) </code>
     <BR><B>Open Alex</B>: <code> https://openalex.org/works?page=1&filter=default.search%3A<BR>music%20emotion%20recognition%20valence%20arousal, <BR>type%3Atypes%2Farticle,publication_year%3A2014-2024,<BR> keywords.id%3Akeywords%2Femotion-recognition,<BR> keywords.id%3Akeywords%2Faffective-computing, language%3Alanguages%2Fen,<BR> open_access.any_repository_has_fulltext%3Atrue </code>",
-    search_validation_procedure = "Manual checking, separate keywords searches"
+    search_validation_procedure = "Manual checking, separate keywords searches",
+    other_search_strategies = "Not applied",
+    results_of_contacting_authors = "Not carried out",
+    search_expiration_and_repetition = "Searches were done during the active search period in late May early June 2024 and no repetition is planned.",
+    search_strategy_justification = "The three major databases should be able yield a robust picture of the topic",
+    misc_search_strategy_details = "No alternative searches were articulated or envisaged."
   )
 
 #### Screening --------
@@ -91,12 +96,12 @@ metamer_prereg <-
 metamer_prereg <-
   metamer_prereg |>
   preregr::prereg_specify(
-    screening_stages = "We completed screening using custom fields inserted to the bibtex file and managed with citation managers (jabref and bibdesk). To filter relevant studies, we followed a three-stage screening procedure. <BR> <B>In stage 1</B>, we screened the 553 studies’ titles for relevance, removing irrelevant studies and recording exclusion criteria (see Used exclusion criteria). CA assigned 63 studies to the High Priority based on titles’ relevance, assigned 338 studies to Low Priority based on irrelevant titles, 152 studies to Medium Priority for additional screening. <BR><B>In stage 2</B>, CA assessed the 152 Medium Priority studies for relevance by screening abstracts. 105 studies’ status changed to Low Priority, whereas 30 studies’ status changed to High Priority. 27 studies remained in the Medium priority category. TE and CA evaluated the remaining 27 studies’, moving X to the High Priority Category and Y to the Medium Priority Category. For studies moved to Low Priority, brief BiBTex comments summarized the rationale for exclusion. <BR><B>In stage 3</B>, TE and CA independently screened Priority 1 studies for relevance, including an <I>include</I>, <I>exclude</I>, or <I>unsure</I> decision in a user-comment BiBTeX field.",
+    screening_stages = "We completed screening using custom fields inserted to the bibtex file and managed with citation managers (jabref and bibdesk). To filter relevant studies, we followed a three-stage screening procedure. <BR> <B>In stage 1</B>, we screened the 553 studies’ titles for relevance, removing irrelevant studies and recording exclusion criteria (see Used exclusion criteria). CA assigned 63 studies to the High Priority based on titles’ relevance, assigned 338 studies to Low Priority based on irrelevant titles, 152 studies to Medium Priority for additional screening. <BR><B>In stage 2</B>, CA assessed the 152 Medium Priority studies for relevance by screening abstracts. 105 studies’ status changed to Low Priority, whereas 30 studies’ status changed to High Priority. 27 studies remained in the Medium priority category. TE and CA evaluated the remaining 27 studies’, moving 15 to the High Priority Category and 12 to the Medium Priority Category. For studies moved to Low Priority, brief BiBTex comments summarized the rationale for exclusion. <BR><B>In stage 3</B>, TE and CA independently screened Priority 1 studies for relevance, including an <I>include</I>, <I>exclude</I>, or <I>unsure</I> decision in a user-comment BiBTeX field.",
     screened_fields_masking = "We left authors, titles, publication years, and journal names unmasked.",
     used_exclusion_criteria = "We excluded studies according to the following exclusion criteria: soundscapes/vocalisations, non-music audio, video clips, physiological markers, dance, video/movie, physiological/EEG/ECG/MEG/GSR/brain imaging/heart rate/neuroscience/brain studies, sensor data, multimodal, autism, ageing, review/systematic review/overview/survey, face emotion recognition, mental health, music therapy, schizophrenia, memory/emotion factors as IVs, recommender systems, or systems that identify the location of emotional excerpts.",
     screener_instructions = "As described above.",
     screening_reliability = "In the pass 1 and 2, we will have a quality control check after the pass to discuss the identified categories. In the third pass, we double-coded decisions, resolving discrepancies through discussion.",
-    screening_reconciliation_procedure = "We reconciled discrepancies through discussion, resolving “unsure” votes first, followed by discrepancies in include/exclude decisions between authors Results of this updating procedure are available in the <A HREF=https://tuomaseerola.github.io/metaMER/studies/pass3_comparison.html>Pass 3 comparison document</A>.",
+    screening_reconciliation_procedure = "We reconcile discrepancies through discussion, resolving “unsure” votes first, followed by discrepancies in include/exclude decisions between authors Results of this updating procedure are available in the <A HREF=https://tuomaseerola.github.io/metaMER/studies/pass3_comparison.html>Pass 3 comparison document</A>.",
     sampling_and_sample_size = "We identified and retained 553 articles from Scopus, Web of Science, and Open Alex based on the search strategy outlined above. See table at the end that details the cumulative exclusions.",
 screening_procedure_justification = "To offer a broad summary of music emotion recognition tasks, we attempted to include all studies involving prediction with acoustic features. We performed screening unblinded and determined inclusion/exclusion criteria based on studies’ relevance to the task explored.",
 screening_data_management_and_sharing = "Sources will be shared as (a) BibTeX library(ies) including reviewer notes."
@@ -107,14 +112,14 @@ metamer_prereg <-
   metamer_prereg |>
   preregr::prereg_specify(
     entities_to_extract = "These are listed and defined in 
-    <A HREF=https://tuomaseerola.github.io/metaMER/studies/Extraction_details.html>Extraction details</A>.",
+    <A HREF=https://tuomaseerola.github.io/metaMER/studies/extraction_details.html>extraction details</A>.",
     extraction_stages = "The data extraction done is stages. In the first stage, an extraction pass of the collection is done by ca using our initial entities to extract document. The challenges are discussed and the entities are revised.",
-    extractor_instructions = "See Extraction details.",
+    extractor_instructions = "See <A HREF=https://tuomaseerola.github.io/metaMER/studies/extraction_details.html>extraction details</A>.",
     extractor_blinding = "Blinding was not used.",
     extraction_reliability = "CA will perform extractions; TE will verify extractions for quality assurance.",
-    extraction_reconciliation_procedure = "NA",
-    extraction_procedure_justification = "TO BE DETAILED",
-    extraction_data_management_and_sharing = "We retain the information of the studies in shared bibtex files, extraction data will be stored in ascii data files (.R), and the analysis and manuscript will be available in quarto/markdown files, and all these are managed, structured, shared and documented in Github repository according to FAIR principles.",
+    extraction_reconciliation_procedure = "Discussion and joint decision for studies where extraction proves to be challenging and issues of interpretation arise.",
+    extraction_procedure_justification = "These are documented in the extraction details.",
+    extraction_data_management_and_sharing = "We retain the information of the studies in shared bibtex files, extraction data will be stored in ascii data files (.bibtex), and the parser for reading the data from .bibtex files to R for the analysis will be available (as quarto/markdown/R files), and all these are managed, structured, shared and documented in Github repository according to FAIR principles.",
     misc_extraction_details = "NA"
   )
 
@@ -126,15 +131,15 @@ metamer_prereg <-
 planned_data_transformations = "For regression studies, we convert all metrics to Pearson correlation coefficients. For classification studies, we convert the outcomes of classification to Matthews Correlation Coefficient (MCC) from the  precision, accuracy, specificity, F1 scores. Alternatively, we use Cohen’s kappa for multiple classes.",
 missing_data = "If no main outcome variables are available, we exclude the study.",
 data_validation = "None planned beyond the staged approached already documented in extraction process.",
-quality_assessment = "Not all the bias assessment tools for clinical studies are relevant for our purposes, we adapt the overall approached advocated in https://doi.org/10.1136/bmj.d5928 especially concerning #4. making our own risk of bias judgements transparent.",
-synthesis_plan = "We analyse regression and classification studies separately, and depending on the quantity of the studies forming suitable sub-groupings, we may further synthesise the results across groupings that are formed along feature sets or music genres",
+quality_assessment = "Not all the bias assessment tools for clinical studies are relevant for our purposes, we adapt the overall approached advocated in <A [https://doi.org/10.1136/bmj.d5928](https://doi.org/10.1136/bmj.d5928) especially concerning #4. Making our own risk of bias judgements transparent.",
+synthesis_plan = "We analyse regression and classification studies separately, and depending on the quantity of the studies forming suitable sub-groupings based on techniques, materials or music collections/genres, we may further synthesise the results across groupings that are formed along these subsets.",
 criteria_for_conclusions = "NA",
 synthesis_masking = "NA",
 synthesis_reliability = "NA",
 synthesis_reconciliation_procedure = "NA",
 publication_bias = "We utilise Egger's test to assess the publication bias and potentially correct the effect size bias by selecting 10% most precise effect sizes as recommended by Van Aert, Wicherts, & Van Assen (2019).",
 sensitivity_analysis = "Within regression and classificiation tasks, we will carry out sensitivity analysis using sub-groups of studied based on type of models, and the type of journal the studies were published in.",
-synthesis_procedure_justification = "TO BE DETAILED",
+synthesis_procedure_justification = "We share our justification of the synthesis and the subsetting carried out in the manuscript but we have not formulated these in advance except for synthesizing classiciation and regression approaches separately and creating subsets within these approaches according to techniques and datasets utilised.",
 synthesis_data_management_and_sharing = "We share the data, procedures, definitions, the analysis scripts with the outcomes as R code in Quarto notes at Github.",
 misc_synthesis_details = FALSE
 )
